todo: check MiniTreeRep correctness, transform it to CNodes, monitor CNodes Perf.